# Python_Modules_1337

Python_09/ex0/: space_station.py
Python_09/ex1/: alien_contact.py
Python_09/ex2/: space_crew.py
ex0/: ft_hello_garden.py
ex2/: ft_harvest_total.py
ex3/: ft_plant_age.py
ex5/: ft_count_harvest_recursive.py
ex7/: ft_seed_inventory.py
python_00/ex1/: ft_plot_area.py
python_00/ex4/: ft_water_reminder.py
python_00/ex5/: ft_count_harvest_iterative.py
python_00/ex6/: ft_garden_summary.py
python_00/ex7/: ft_seed_inventory.py
python_01/ex0/: ft_garden_intro.py
python_01/ex1/: ft_garden_data.py
python_01/ex2/: ft_plant_growth.py
python_01/ex3/: ft_plant_factory.py
python_01/ex4/: ft_garden_security.py
python_01/ex5/: ft_plant_types.py
python_01/ex6/: ft_garden_analytics.py
python_02/ex0/: ft_first_exception.py
python_02/ex1/: ft_different_errors.py
python_02/ex2/: ft_custom_errors.py
python_02/ex3/: ft_finally_block.py
python_02/ex4/: ft_raise_errors.py
python_02/ex5/: ft_garden_management.py
python_03/ex0/: ft_command_quest.py
python_03/ex1/: ft_score_analytics.py
python_03/ex2/: ft_coordinate_system.py
python_03/ex3/: ft_achievement_tracker.py
python_03/ex4/: ft_inventory_system.py
python_03/ex5/: ft_data_stream.py
python_03/ex6/: ft_analytics_dashboard.py  test.py
python_04/: sample_data.json
python_06/: Makefile  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
python_07/: Makefile
python_08/ex01/: loading.py  pyproject.toml  requirements.txt
(+40 files in other folders)
