[tool.poetry]
name = "matrix-analysis"
version = "0.1.0"
description = "A data analysis program for analyzing Matrix anomalies."
authors = ["outaouss"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"